app/styles/main.sass
// bower:scss
// endbower

$grey: #F7F7F7
$dark-grey: #4F4F4F
$primary: #6A1AC8
$primary-dark: #3024AE
$primary-light: #C36CD5
$secondary-light: #B7CE42
$secondary-dark: #91B515
$text-color: #62627A

@import grid
@import bourbon/app/assets/stylesheets/bourbon

// dimensions
$timetable-hour-column-width: 96px !default
$timetable-hour-row-height: 42px
$timetable-heading-height: 26px
$timetable-breakpoint: "only screen and (min-width: 0px)"
// colors & decoration
$timetable-grid-color: #E5E5E5 !default
$timetable-grid: 1px solid $timetable-grid-color !default
$timetable-row-header-padding: 15px !default
$timetable-row-header-color: $dark-grey
$timetable-row-separator: 1px solid white
$timetable-row-header-gap: 1px solid transparent
$timetable-row-uneven-color: $grey
$timetable-row-even-color: $grey
$timetable-entry-color: $secondary-light
$timetable-entry-color-hover: $secondary-dark
$timetable-entry-border: none
$timetable-entry-padding: 10px !default

@import timetable/app/styles/plugin


/* ==========================================================
 * mixins
 * ==========================================================
 */

@mixin valign-middle
  position: relative
  top: 50%
  +transform(translateY(-50%))

@mixin valign-parent
  +transform-style(preserve-3d)

/* ==========================================================
 * default element styles
 * ==========================================================
 */

body
  font-family: 'Open Sans', 'Helvetica', sans-serif
  font-weight: 300
  color: $text-color
  line-height: 2
  -webkit-font-smoothing: antialiased

a
  text-decoration: none
  color: $primary

img
  max-width: 100%
  height: auto

h1, h2, h3
  font-family: 'Lato', 'Helvetica', sans-serif
  color: $primary-dark
  font-weight: 300
  margin-left: -3px
  margin-bottom: 0.7em
  line-height: 1

h1
  font-size: 2.875em
  line-height: 1.25
  margin-top: 0.7em
  margin-bottom: 1em

h2
  font-size: 2.625em

h3
  font-weight: 600
  letter-spacing: -0.02em

code, pre
  font-size: 0.95em

pre
  color: black
  padding: 1.2em 1.4em
  margin: 1em 0
  line-height: 1.5
  background-color: $grey
  overflow-x: scroll
  border-radius: 3px

p + p
  margin-top: 1.5em

p.centered
  text-align: center

hr
  margin: 4em 0
  border-color: $grey

/* ==========================================================
 * repeated styles
 * ==========================================================
 */

.grey-bg-color
  background-color: $grey
.primary-bg-color
  background-color: $primary

.flip-text-color
  h1, h2, h3
    color: white
  &, p
    color: #B990E6

.btn
  @extend h3
  background-color: transparentize($primary-dark, 0.3)
  display: inline-block
  padding: 1.15em 2.7em
  text-transform: uppercase
  font-size: 0.78em
  letter-spacing: 0.09em
  border-radius: 4px
  transition: background-color 300ms ease
  margin: 0.3em

  &:hover, &.secondary:hover
    background-color: transparentize($primary-light, 0.2)

  &.secondary
    background-color: transparentize($primary-dark, 0.6)
    &:hover
      // background-color: transparentize($primary-dark, 0.5)

.vpad
  padding-top: 4.5em
  padding-bottom: 4.5em
.sm-vpad
  padding-top: 2.5em
  padding-bottom: 2.5em

.github-ribbon
  position: absolute
  z-index: 10
  top: 0
  right: 0
  +gridle_state(xs)
    display: none


/* ==========================================================
 * custom element styles
 * ==========================================================
 */

.browserupgrade
  margin: 0.2em 0
  background: #ccc
  color: #000
  padding: 0.2em 0

body > header
  @extend .flip-text-color
  background-image: linear-gradient(135deg, $primary-light, $primary-dark)
  text-align: center

  +gridle_state(sm)
    text-align: left

  .hero-wrap
    @extend .sm-vpad
    position: relative

    +gridle_state(sm)
      +valign-parent
      height: 100vh
  .title-bar
    +gridle(12)
  .cta-column
    +gridle(12)
    +gridle(7, sm)
  .demo-column
    +gridle(12)
    +gridle(5, sm)
    +gridle_state(sm)
      text-align: right
  .cta-column, .demo-column
    +gridle_state(sm)
      +valign-middle
  .demo-wrapper
    position: relative
    display: inline-block
    max-width: 100%

    .viewport
      position: absolute
      width: 65%
      height: 74.7%
      left: 16.3%
      bottom: 16.3%
      overflow-y: scroll
      -webkit-overflow-scrolling:touch

.timetable
  text-align: left
  color: white
  text-transform: uppercase
  font-size: 0.72em
  margin-top: -1em

  .row-heading
    @extend h3
    font-size: 0.875em
  .time-label
    @extend h3
    color: black !important
    font-size: 0.6rem
    letter-spacing: 0.13em
    line-height: $timetable-hour-row-height

  time
    transition: margin-left 550ms ease-in-out

  &.animate time
    margin-left: -200px
    transition: margin-left 400ms ease-in-out


.content-wrap, .hero-wrap
  +clearfix
  > section
    +gridle(12)

footer section
  @extend .sm-vpad
  border-top: 1px solid $grey

